--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 *.so
 *.dylib
 
+.env
+
 # Test binary, built with `go test -c`
 *.test
 
@@ -13,3 +15,6 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+psql-data/
+rabbitmq/
