--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     depends_on:
       - db
       - rabbitmq
+    env_file:
+      - .env
   migration:
     container_name: nuveo_app_migration
     image: gosidekick/migration:v3.0.0
@@ -30,6 +32,8 @@ services:
     restart: always
     ports:
       - 5432:5432
+    expose:
+      - 5432
     volumes:
       - /var/lib/postgresql/data
     networks:
