feat: create customer messages consumer

--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,11 @@
 PSQL_USER=nuveo
 PSQL_PWD=nuveo
 PSQL_DB=nuveo
+PSQL_HOST=nuveo_db
 
 RABBITMQ_USER=nuveo
 RABBITMQ_PWD=nuveo
-RABBITMQ_COOKIE=nuveo
+RABBITMQ_HOST=nuveo_rabbitmq
+RABBITMQ_CUSTOMER_CREATE_QUEUE=customer.create
 
 NOVOS_CLIENTES=/app/new_customers
